# septicomics

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pre-commit-shortcut.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSING.md  Plans.md  README.md  SECURITY.md  TODO.md  test_estimator.rs
.github/workflows/: ci.yml
crates/cdm/: Cargo.toml
crates/cdm/src/: error.rs  lib.rs  macros.rs  omics.rs  outcome.rs  parse.rs  phenotype.rs  sample.rs  version.rs
crates/fed-protocol/: Cargo.toml
crates/fed-protocol/proptest-regressions/: property_tests.txt
crates/fed-protocol/src/: aggregate_result.rs  analysis_plan.rs  lib.rs  node_capability.rs  property_tests.rs  version_negotiation.rs
docs/: DEV_SETUP.md  cdm-versioning.md
docs/governance/: CONSENT_SCOPE_VOCABULARY.md  NODE_DATA_SHARING_AGREEMENT.md
scripts/: dev-bootstrap.sh  setup-hooks.sh
